:bug: use the debian envvars to make the compatibility with the packages easier

--- a/conf/apache/apache2.conf
+++ b/conf/apache/apache2.conf
@@ -1,7 +1,7 @@
-DefaultRuntimeDir /run/apache2
-PidFile /run/apache2/apache2.pid
-User www-data
-Group www-data
+DefaultRuntimeDir ${APACHE_RUN_DIR}
+PidFile ${APACHE_PID_FILE}
+User ${APACHE_RUN_USER}
+Group ${APACHE_RUN_GROUP}
 
 # ErrorLog: The location of the error log file.
 # If you do not specify an ErrorLog directive within a <VirtualHost>
