:sparkles: allow the user to specify custom configurations

--- a/conf/apache/security2.conf
+++ b/conf/apache/security2.conf
@@ -1,10 +1,13 @@
 <IfModule security2_module>
-        # Include all the *.conf files in /etc/modsecurity.
-        # Keeping your local configuration in that directory
-        # will allow for an easy upgrade of THIS file and
-        # make your life easier
-        IncludeOptional /etc/modsecurity/modsecurity-${WAF_MOD}.conf
+        # Include custom rules
+        IncludeOptional /etc/modsecurity/rules.pre/*.conf
+
+        # Include the default rules
+        Include /etc/modsecurity/modsecurity.conf
 
         # Include OWASP ModSecurity CRS rules if installed
-        IncludeOptional /usr/share/modsecurity-crs/owasp-crs.load
+        Include /usr/share/modsecurity-crs/owasp-crs.load
+
+        # Include custom rules
+        IncludeOptional /etc/modsecurity/rules.post/*.conf
 </IfModule>
